--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/dimavz/dev_proj/issues"
   },
-  "homepage": "https://github.com/dimavz/dev_proj#readme"
+  "homepage": "https://github.com/dimavz/dev_proj#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
