--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-refresh": "^1.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0"
   }
 }
