--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "homepage": "https://github.com/dimavz/dev_proj#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-webserver": "^0.9.1"
+    "gulp-sass": "^3.1.0"
   }
 }
